# domain-collector

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.ru.md
src/check_domains/: __init__.py
src/collect_domains/: __init__.py  browser.py  file_operations.py  utils.py
src/domain_collector/: main.py
src/domain_collector/utils/: browser.py
