[project]
name = "check-domains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxim (neiromaster) Gavrilenko", email = "parrysh@mail.ru" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
check-domains = "check_domains:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
